# brofiler

./: .gitignore  CMakeLists.txt  LICENSE  PrepareVersion.cmd  Profiler.sln  README.md
Brofiler/: Brofiler.csproj  CloseableTabItem.cs  ColorToBrushConverter.cs  GlobalSettings.cs  MainWindow.xaml.cs  ProfilerClient.cs  ThreadView.xaml.cs
Brofiler/Data/: Durationable.cs  EventBoard.cs  EventData.cs  EventDescription.cs  EventFrame.cs  EventTree.cs  Frame.cs  FrameCollection.cs  SamplingFrame.cs  SourceView.cs
Brofiler/Frames/: FrameDataTable.xaml  FrameDataTable.xaml.cs  FrameInfo.xaml  SourceViewControl.xaml.cs
Brofiler/Message/: Message.cs
Brofiler/Properties/: AssemblyInfo.cs
Brofiler/TimeLine/: TimeLine.xaml.cs  TimeLineItem.xaml.cs
BrofilerCmd/: BrofilerCmd.csproj  Program.cs
BrofilerCmd/Properties/: AssemblyInfo.cs
BrofilerLib/: BrofilerLib.csproj  FilterMode.cs  ProfilerClient.cs
BrofilerLib/Data/: Durationable.cs  EventBoard.cs  EventData.cs  EventDescription.cs  EventFrame.cs  EventTree.cs  Frame.cs  FrameCollection.cs  SamplingFrame.cs  SourceView.cs
BrofilerLib/Message/: Message.cs
BrofilerLib/Properties/: AssemblyInfo.cs
ProfilerCore/: Brofiler.h  CMakeLists.txt  Common.h  Concurrency.h  Core.cpp  Core.h  ETW.cpp  ETW.h  Event.cpp  EventDescriptionBoard.cpp  HPTimer.h  Hook.cpp  Hook.h  HookFunction.h  HookFunction32.asm  HookFunction64.asm  MemoryPool.h  Message.cpp  Message.h  ProfilerCore.vcxproj  ProfilerCore.vcxproj.filters  ProfilerServer.cpp  ProfilerServer.h  Sampler.cpp  Sampler.h  Serialization.cpp  Serialization.h  SymEngine.h  Thread.cpp  Thread.h
ProfilerCore/Linux/: CommonLinux.h  ETWLinux.cpp  HPTimerLinux.cpp  HookLinux.cpp  PublicCommonLinux.h  SocketLinux.h  SymEngineLinux.cpp  ThreadLinux.cpp
ProfilerCore/Windows/: CommonWindows.h  ConcurrencyWindows.h  ETWWindows.cpp  HPTimerWindows.cpp  HookWindows.cpp  SocketWindows.h  SymEngineWindows.cpp  ThreadWindows.cpp
ProfilerTest/: ProfilerTest.cpp  ProfilerTest.vcxproj  ProfilerTest.vcxproj.filters  TestEngine.cpp  TestEngine.h
